--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "training_platform_weapp",
+  "version": "1.0.0",
+  "description": "",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "vuex": "^3.4.0"
   }
